# basetui_ncurses

./: pyproject.toml
basetui_ncurses/: __main__.py  application.py  config.py  enums.py  subprog_template.py
basetui_ncurses/subprog/: __init__.py
src/basetui_ncurses/: __init__.py  __main__.py  application.py
src/basetui_ncurses/resource/: color_pairs.json  colors.json
src/basetui_ncurses/subprog/: main.py
