[project]
name = "basetui_ncurses"
description = """A wrapper for your code to simplify writing ncurses applications, with a provided example."""
version = "0.0.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
basetui_ncurses = ["resource/*.json"]